added story section and gallery section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:wght@100;400;600;700&display=swap" rel="stylesheet" />
 
     <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -31,7 +31,7 @@
             <p>2024</p>
           </div>
         </div>
-        <a href="#undangan" class="btn btn-lg">Lihat Undangan</a>
+        <a href="#home" class="btn btn-lg">Lihat Undangan</a>
       </main>
     </section>
 
@@ -70,7 +70,7 @@
           </div>
           <div class="row couple">
             <div class="col-lg-6">
-              <div class="row">
+              <div class="row justify-content-center align-items-center">
                 <div class="col-8 text-end">
                   <h3>Bintang Santosa</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum reprehenderit eligendi perferendis, aliquid nostrum id itaque optio possimus? Quisquam, eligendi.</p>
@@ -86,7 +86,7 @@
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="row">
+              <div class="row justify-content-center align-items-center">
                 <div class="col-4">
                   <img src="/imgs/2.jpg" alt="Bintang Santosa" class="img-responsive rounded-circle" />
                 </div>
@@ -94,7 +94,7 @@
                   <h3>?</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum reprehenderit eligendi perferendis, aliquid nostrum id itaque optio possimus? Quisquam, eligendi.</p>
                   <p>
-                    Putra dari <br />
+                    Putri dari <br />
                     Bapak ?<br />
                     Ibu ?
                   </p>
@@ -113,15 +113,15 @@
             <h2>Informasi Acara</h2>
             <p class="alamat">Alamat : Jl. Aceh No.50, Babakan Ciamis, Kec. Sumur Bandung, Kota Bandung, Jawa Barat 40117</p>
             <a href="https://goo.gl/maps/o9CNC7NT161cqaK28" target="_blank" class="btn btn-light btn-sm my-4"> Buka Peta</a>
-            <p class="description">Kami harap agar tidak keliru dan tidak salah alamat ataupun tanggal. Manakala tiba ditujuan tidak ada tanda-tanda dilangsungkannya pernikahan, bisa jadi Anda salah alamat atau tidak teliti dalam mlihat jadwal</p>
+            <p class="description">
+              Kami harap agar tidak keliru dan tidak salah alamat ataupun tanggal. Manakala tiba ditujuan tidak ada tanda-tanda dilangsungkannya pernikahan, bisa jadi Anda salah alamat atau tidak teliti dalam mlihat jadwal
+            </p>
           </div>
         </div>
         <div class="row justify-content-center mt-4">
           <div class="col-md-5 col-10">
             <div class="card text-center text-bg-light">
-              <div class="card-header">
-                Akad Nikah
-              </div>
+              <div class="card-header">Akad Nikah</div>
               <div class="card-body">
                 <div class="row align-items-center justify-content-center">
                   <div class="col-md-6">
@@ -134,16 +134,12 @@
                   </div>
                 </div>
               </div>
-              <div class="card-footer">
-                Acara Akad Nikah dilakukan secara tertib
-              </div>
+              <div class="card-footer">Acara Akad Nikah dilakukan secara tertib</div>
             </div>
           </div>
           <div class="col-md-5 col-10">
             <div class="card text-center text-bg-light">
-              <div class="card-header">
-                Resepsi
-              </div>
+              <div class="card-header">Resepsi</div>
               <div class="card-body">
                 <div class="row justify-content-center">
                   <div class="col-md-6">
@@ -156,15 +152,112 @@
                   </div>
                 </div>
               </div>
-              <div class="card-footer">
-                Acara Resepsi dilakukan sampai selesai
-              </div>
+              <div class="card-footer">Acara Resepsi dilakukan sampai selesai</div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
+    <section id="story" class="story">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Bagaimana cinta kami bersatu</span>
+            <h2>Our Story</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam cumque velit dolorum quisquam illo harum neque earum recusandae.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <ul class="timeline">
+              <li>
+                <div class="timeline-img"></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>First Meet</h3>
+                    <span>30 Maret 2020</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur necessitatibus nesciunt aliquam delectus quia tempora.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-img"></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Engagement</h3>
+                    <span>22 Juni 2022</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatibus quia laboriosam magni? Eaque cumque illum voluptatibus beatae!</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-img"></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Wedding</h3>
+                    <span>12 Mei 2024</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non quos, veniam odit sequi earum, inventore nemo similique eveniet voluptate quae eligendi necessitatibus!</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="galery" class="gallery">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Memory cinta kita</span>
+            <h2>Galery foto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam cumque velit dolorum quisquam illo harum neque earum recusandae.</p>
+          </div>
+        </div>
+        <div class="row row-cols-md-4 row-cols-sm-3 row-cols-2">
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/301/1200/768">
+              <img src="https://picsum.photos/id/301/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/30/1200/768">
+              <img src="https://picsum.photos/id/30/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/222/1200/768">
+              <img src="https://picsum.photos/id/222/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/172/1200/768">
+              <img src="https://picsum.photos/id/172/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/772/1200/768">
+              <img src="https://picsum.photos/id/772/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/42/1200/768">
+              <img src="https://picsum.photos/id/42/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
