changes photos gallery

--- a/index.html
+++ b/index.html
@@ -224,33 +224,33 @@
         </div>
         <div class="row row-cols-md-4 row-cols-sm-3 row-cols-2">
           <div class="col mt-3">
-            <a href="https://picsum.photos/id/301/1200/768">
-              <img src="https://picsum.photos/id/301/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            <a href="/imgs/galery/1.jpeg">
+              <img src="/imgs/galery/1.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
-            <a href="https://picsum.photos/id/30/1200/768">
-              <img src="https://picsum.photos/id/30/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            <a href="/imgs/galery/2.jpg">
+              <img src="/imgs/galery/2.jpg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
-            <a href="https://picsum.photos/id/222/1200/768">
-              <img src="https://picsum.photos/id/222/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            <a href="/imgs/galery/3.jpg">
+              <img src="/imgs/galery/3.jpg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
-            <a href="https://picsum.photos/id/172/1200/768">
-              <img src="https://picsum.photos/id/172/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            <a href="/imgs/galery/4.jpeg">
+              <img src="/imgs/galery/4.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
-            <a href="https://picsum.photos/id/772/1200/768">
-              <img src="https://picsum.photos/id/772/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            <a href="/imgs/galery/5.jpeg">
+              <img src="/imgs/galery/5.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
-            <a href="https://picsum.photos/id/42/1200/768">
-              <img src="https://picsum.photos/id/42/583/757" alt="foto preweed" class="img-fluid w-100 rounded">
+            <a href="/imgs/galery/6.jpeg">
+              <img src="/imgs/galery/6.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
         </div>
