--- a/index.html
+++ b/index.html
@@ -230,27 +230,27 @@
           </div>
           <div class="col mt-3">
             <a href="/imgs/galery/2.jpg">
-              <img src="/imgs/galery/2.jpg" alt="foto preweed" class="img-fluid w-100 rounded">
+              <img src="/imgs/galery/thumbnail/2.jpg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
             <a href="/imgs/galery/3.jpg">
-              <img src="/imgs/galery/3.jpg" alt="foto preweed" class="img-fluid w-100 rounded">
+              <img src="/imgs/galery/thumbnail/3.jpg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
             <a href="/imgs/galery/4.jpeg">
-              <img src="/imgs/galery/4.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
+              <img src="/imgs/galery/thumbnail/4.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
             <a href="/imgs/galery/5.jpeg">
-              <img src="/imgs/galery/5.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
+              <img src="/imgs/galery/thumbnail/5.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
           <div class="col mt-3">
             <a href="/imgs/galery/6.jpeg">
-              <img src="/imgs/galery/6.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
+              <img src="/imgs/galery/thumbnail/6.jpeg" alt="foto preweed" class="img-fluid w-100 rounded">
             </a>
           </div>
         </div>
